--- a/Sources/Coherence/coherence_simple.tex
+++ b/Sources/Coherence/coherence_simple.tex
@@ -15,23 +15,45 @@ definition, and the connection between logical equivalence and coherence.
 \fnamee.
 
 %-------------------------------------------------------------------------------
-\section{Overview}
+\section{The Intuition}
 
-Coherence is easy to establish for \oname as its rigid rules mean that there is
-at most one possible subtyping derivation between any two types.  As a
-consequence there is only one possible elaboration and thus one
-possible behavior for any program.
+\paragraph{Duplication is Harmless.}
+
+While requiring that all intersections are disjoint as in \oname is sufficient
+to guarantee coherence, it is not necessary. In fact, such requirement
+unnecessarily encumbers the subtyping definition with disjointness constraints
+and an ad-hoc treatment of ``top-like'' types. Indeed, the value $[[1 ,, 1]]$ of
+the non-disjoint type $[[ nat & nat ]]$ is entirely
+unambiguous, and $(\mer{1}{1}) + 3$ can obviously only result in $4$. More
+generally, when the overlapping components of an intersection type have the same
+value, there is no ambiguity problem. \namee uses this idea to relax \oname's
+enforcement of disjointness. In the case of a merge, it is hard to statically
+decide whether the two arguments have the same value, and thus \namee still
+requires disjointness. Yet, disjointness is no longer required for the
+well-formedness of types and overlapping intersections can be created implicitly
+through subtyping, which results in duplicating values at runtime. For instance,
+while $[[ 1,, 1]]$ is not expressible $[[ 1 : nat & nat]]$
+creates the equivalent value implicitly.
+% The consequence of this relaxation of disjointness is a much simplified
+% type system for \namee.
+In short, duplication is harmless and subtyping only generates duplicated values
+for non-disjoint types.
+
+% Coherence is easy to establish for \oname as its rigid rules mean that there is
+% at most one possible subtyping derivation between any two types.  As a
+% consequence there is only one possible elaboration and thus one
+% possible behavior for any program.
 
 Two factors make establishing coherence for \namee much more difficult: the
 relaxation of disjointness and the adoption of the more expressive subtyping
-rules from the BCD system (for which \oname lacks). These two factors mean that subtyping proofs are no
-longer unique and hence that there are multiple elaborations of the same source
-program. For instance, $\inter{\mathsf{Int}}{\mathsf{Int}}$ is a subtype of $\mathsf{Int}$ in two
-ways: by projection on either the first or second component.
-Hence the fact that all elaborations yield the same result when evaluated has
-become a much more subtle property that requires sophisticated reasoning.
-For instance, in the example, we can see that coherence holds because  at
-runtime any value of type $\inter{\mathsf{Int}}{\mathsf{Int}}$ has identical components, and
+rules from the BCD system (for which \oname lacks). These two factors mean that
+subtyping proofs are no longer unique and hence that there are multiple
+elaborations of the same source program. For instance, $[[ nat & nat ]]$ is a
+subtype of $[[nat]]$ in two ways: by projection on either the first or second
+component. Hence the fact that all elaborations yield the same result when
+evaluated has become a much more subtle property that requires sophisticated
+reasoning. For instance, we can see that coherence holds because at runtime any
+value of type $[[nat & nat]]$ has identical components, and
 thus both projections yield the same result.
 
 For \namee in general, we show coherence by capturing the non-ambiguity
