--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -7,6 +7,7 @@
 
 \todo{mention incompatibility between distributivity and effects}
 
+\todo{mention nominal typing}
 
 \section{On Categorical Semantics}
 \label{sec:category}
